# zipdive

./: Cargo.toml  Readme.org
.github/workflows/: deploy.yaml  test.yaml
src/: app.rs  error.rs  last.rs  lib.rs  main.rs
src/app/: mod.rs  zipfiles.rs
src/zip/: mod.rs  utils.rs
