[package]
name = "zipdive"
version = "0.1.0"
edition = "2021"

[dependencies]
walkdir = "2.5.0"
iced = { version = "0.13.1", features = ["tokio"]}
rfd = "0.15.0"
tokio = { version = "1.40.0", features = ["rt"] }

[dev-dependencies]
tokio-test = "*"
assert_fs = "*"
zip = "0.6"

[[bin]]
  name = "zipdive"
  path = "./src/main.rs"
